// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto_processing_lib.scrubber.testing;

import "tech/internal/env/framework/field_mask/testdata/field_mask_test.proto";

// A type of field checker that modifies the proto scrubber's behavior.
enum FieldCheckerType {
  FIELD_CHECKER_UNSPECIFIED = 0;
  FULL_SCAN_CHECKER = 1;
  DEPTH_LIMITED_CHECKER = 2;
  DEPTH_EXTENDED_CHECKER = 3;
}

// Flags that modify the proto scrubber's and checksummer's behavior.
message Flags {
  bool esf_experimental_retain_map_key_for_null_value = 1;
  bool esf_experimental_retain_type_url_for_empty_any_field = 2;
  uint32 esf_test_abort_by_checksum_fail = 3;
}

message ProtoScrubberFuzzInput {
  ScrubberTestMessage test_message = 1;
  Flags flags = 2;
  FieldCheckerType field_checker_type = 3;
}
